# neat-dnfs

./: README.md
neat-dnfs/: CMakeLists.txt  CMakeSettings.json
neat-dnfs/analysis/: launch-visualizer.bat  neat-dnfs-visualizer.py  solution-to-genome-latex.py
neat-dnfs/data/AND/: 2026-02-07 20h47m11s_summary.md  AND_experiment_summary.md  evolution_timestamps.txt  per_generation_overview.txt  solution 4612 generation 5 species 0 fitness 0.988201.json
neat-dnfs/data/Delayed Match to Sample/: 2026-01-22 12h47m03s_summary.md  evolution_timestamps.txt  per_generation_overview.txt  solution 30623 generation 31 species 69 fitness 0.987305.json
neat-dnfs/data/Detection Instability/: 2026-01-23 10h11m26s_summary.md  evolution_timestamps.txt  per_generation_overview.txt  solution 1120 generation 2 species 0 fitness 0.974337.json
neat-dnfs/data/Inhibition of Return/: 2026-01-20 20h31m40s_summary.md  evolution_timestamps.txt  per_generation_overview.txt  solution 129995 generation 131 species 92 fitness 0.978699.json
neat-dnfs/data/Memory Instability/: 2026-01-23 16h12m54s_summary.md  evolution_timestamps.txt  per_generation_overview.txt  solution 2652 generation 3 species 3 fitness 0.962585.json
neat-dnfs/data/Selection Instability/: 2026-01-25 13h27m12s_summary.md  evolution_timestamps.txt  per_generation_overview.txt  solution 11852 generation 12 species 9 fitness 0.980322.json
neat-dnfs/data/XOR/: 2026-02-10 00h48m59s_summary.md  XOR_experiment_summary.md  evolution_timestamps.txt  per_generation_overview.txt  solution 42608 generation 43 species 25 fitness 0.973070.json
neat-dnfs/examples/: incremental_evolution.cpp  solution_evaluation.cpp  tabula_rasa_evolution.cpp
neat-dnfs/include/: constants.h
neat-dnfs/include/neat/: connection_gene.h  field_gene.h  genome.h  population.h  solution.h  species.h
neat-dnfs/include/solutions/: and.h  delayed_match_to_sample.h  detection_instability.h  inhibition_of_return.h  memory_instability.h  memory_trace.h  selection_instability.h  xor.h
neat-dnfs/include/tools/: logger.h  utils.h
neat-dnfs/src/neat/: connection_gene.cpp  field_gene.cpp  genome.cpp  population.cpp  solution.cpp  species.cpp
neat-dnfs/src/solutions/: and.cpp  delayed_match_to_sample.cpp  detection_instability.cpp  inhibition_of_return.cpp  memory_instability.cpp  memory_trace.cpp  selection_instability.cpp  xor.cpp
neat-dnfs/src/tools/: logger.cpp
neat-dnfs/templates/: and-preshape-test.json  and.json  delayed-match-to-sample.json  detection-instability.json  inhibition-of-return.json  memory-instability.json  memory-trace.json  selection-instability.json  selection.json  self-sustained-memory.json  single-bump-propagation.json  test-dmts.json  test-ior.json  timing.json  xor.json
neat-dnfs/tests/: entry.cpp  test_connection_gene.cpp  test_field_gene.cpp  test_genome.cpp  test_population.cpp  test_single_bump.cpp  test_solution.cpp  test_species.cpp  test_utils.cpp
